# photopipeline

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  photopipe.example.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/assets/: analyze.js  app.js  browse.js  home.js  index.html  review.js  style.css
crates/cli/src/: lib.rs  main.rs
crates/cli/src/serve/: handlers.rs  mod.rs
crates/cli/tests/: cli.rs  serve.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: analyze.rs  config.rs  error.rs  lib.rs  library.rs  ml.rs
crates/pipeline/src/cache/: mod.rs
crates/pipeline/src/calibration/: buckets.rs  mod.rs
crates/pipeline/src/catalog/: mod.rs  queries.rs  schema.rs
crates/pipeline/src/dedupe/: cluster.rs  knn.rs  mod.rs
crates/pipeline/src/defect/: blur.rs  exposure.rs  mod.rs
crates/pipeline/src/ingest/: exif.rs  hash.rs  mod.rs  preview.rs
crates/pipeline/src/models/: detector.rs  embedder.rs  iqa.rs  mod.rs
crates/pipeline/src/output/: mod.rs
crates/pipeline/tests/: analyze.rs  calibration.rs  decisions.rs  dedupe.rs  defect.rs  integration.rs  library.rs  library_meta.rs  ml.rs  review_tree.rs
docs/superpowers/plans/: 2026-06-26-phase4-detector-and-calibration.md  2026-06-26-phase5-dedupe.md  2026-06-26-phase6-review-tree.md  2026-06-26-phase7-polish.md  2026-06-27-review-ui.md  2026-06-27-windows-copy-export.md  2026-06-28-library-model-foundation.md  2026-06-29-browser-analyze-experience.md
docs/superpowers/specs/: 2026-06-27-review-ui-design.md  2026-06-27-windows-copy-export-design.md  2026-06-28-library-model-foundation-design.md  2026-06-29-browser-analyze-experience-design.md
models/: README.md  download.sh
tests/: integration.rs
tools/: export_clip_iqa.py  export_dinov2.py  export_rt_detr.py  requirements.txt
