[workspace]
members = ["crates/pipeline", "crates/cli"]
resolver = "2"

[workspace.dependencies]
anyhow      = "1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap        = { version = "4", features = ["derive"] }