[package]
name    = "photopipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photopipe"
path = "src/main.rs"

[dependencies]
pipeline           = { path = "../pipeline" }
anyhow             = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
serde_json         = { workspace = true }
sysinfo            = { workspace = true }

[dev-dependencies]
pipeline   = { path = "../pipeline" }
tempfile   = { workspace = true }
serde_json = { workspace = true }