[package]
name    = "photopipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photopipe"
path = "src/main.rs"

[lib]
name = "photopipe"
path = "src/lib.rs"

[dependencies]
pipeline           = { path = "../pipeline" }
anyhow             = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
serde_json         = { workspace = true }
sysinfo            = { workspace = true }
axum               = "0.7"
tokio              = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
rust-embed         = "8"
dirs               = { workspace = true }

[dev-dependencies]
pipeline   = { path = "../pipeline" }
tempfile   = { workspace = true }
serde_json = { workspace = true }
image      = { workspace = true }
tower      = { version = "0.5", features = ["util"] }